kubernetes/apps/media/tracearr/jellyfin-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tracearr-to-jellyfin
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: jellyfin
      app.kubernetes.io/instance: media-jellyfin
      app.kubernetes.io/name: media-jellyfin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: tracearr
              app.kubernetes.io/instance: media-tracearr
              app.kubernetes.io/name: media-tracearr
      ports:
        - port: 8096
          protocol: TCP
