kubernetes/apps/media/tracearr/jellystat-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tracearr-to-jellystat
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: jellystat
      app.kubernetes.io/instance: media-jellystat
      app.kubernetes.io/name: media-jellystat
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: tracearr
              app.kubernetes.io/instance: media-tracearr
              app.kubernetes.io/name: media-tracearr
      ports:
        - port: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tracearr-to-jellystat-postgres
  namespace: media
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: jellystat-postgres-v18
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: tracearr
              app.kubernetes.io/instance: media-tracearr
              app.kubernetes.io/name: media-tracearr
      ports:
        - port: 5432
          protocol: TCP
